Update code in index.html

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript-blog</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="blog">
       <div class="container">
         <h1 class="logo">my blog</h1>
         <main class="wrapper">
-          <aside class="sidebar">
+          <aside class="sidebar" aria-label="Post navigation">
             <h2 class="section-title">All posts</h2>
             <ul class="list titles">
               <li>
@@ -384,7 +384,7 @@
               </div>
             </article>
           </section>
-          <aside class="sidebar">
+          <aside class="sidebar" aria-label="Tags and Authors">
             <h2 class="section-title">Tags</h2>
             <ul class="list tags">
               <li><a href="#">design</a> <span>(6)</span></li>
