Add space for dynamic author list in HTML sidebar

--- a/index.html
+++ b/index.html
@@ -332,6 +332,8 @@
             <h2 class="section-title">Tags</h2>
             <ul class="list tags">
             </ul>
+            <h2 class="section-title">Authors</h2>
+            <ul class="list authors"></ul>
             </aside>
         </main>
       </div>
