--- a/index.html
+++ b/index.html
@@ -342,12 +342,34 @@
       <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
-    <!-- Szablon chmury tagów (z pętlą) -->
-    <script id="template-tag-cloud-link" type="text/x-handlebars-template">
-      {{#each tags}}
-        <li><a href="#tag-{{tag}}" class="{{className}}">{{tag}}</a></li>
-      {{/each}}
-    </script>
+    <!-- Szablon linku do artykułu -->
+<script id="template-article-link" type="text/x-handlebars-template">
+  <li><a href="#{{id}}"><span>{{title}}</span></a></li>
+</script>
+
+<!-- Szablon tagu w artykule -->
+<script id="template-article-tag" type="text/x-handlebars-template">
+  <li><a href="#tag-{{tag}}">{{tag}}</a></li>
+</script>
+
+<!-- Szablon autora w artykule -->
+<script id="template-article-author" type="text/x-handlebars-template">
+  <a href="#author-{{author}}">{{author}}</a>
+</script>
+
+<!-- Szablon chmury tagów (z pętlą) -->
+<script id="template-tag-cloud-link" type="text/x-handlebars-template">
+  {{#each tags}}
+    <li><a href="#tag-{{tag}}" class="{{className}}">{{tag}}</a></li>
+  {{/each}}
+</script>
+
+<!-- Szablon autorów (z pętlą) -->
+<script id="template-author-list" type="text/x-handlebars-template">
+  {{#each authors}}
+    <li><a href="#author-{{author}}">{{author}}</a> ({{count}})</li>
+  {{/each}}
+</script>
     <script src="js/script.js"></script>
   </body>
 </html>
